--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3307/tempdata
+spring.datasource.url=jdbc:mysql://mysql:3306/tempdata
 spring.datasource.username=root
 spring.datasource.password=root
