--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.1'
 services:
   mysql:
     image: mariadb:latest
+    command: --character-set-server=utf8 --collation-server=utf8_unicode_ci
     ports:
       - 3307:3306
     environment:
