--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,4 +8,11 @@ services:
     environment:
       MYSQL_DATABASE: tempdata
       MYSQL_ROOT_PASSWORD: root
+      
+  grafana:
+    image: grafana/grafana:5.0.0
+    ports:
+      - 8081:3000
+    volumes:
+      - ./grafana-mysql.yml:/etc/grafana/provisioning/datasources/datasource.yml
 
