--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,6 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-web')
     runtime('mysql:mysql-connector-java')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
 
-    compile('org.projectlombok:lombok:1.16.20');
+    compile('org.projectlombok:lombok:1.16.20')
 }
