Add MySQL backend functionality

--- a/raspberry/package.json
+++ b/raspberry/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "ds18b20": "^0.1.0"
+    "ds18b20": "^0.1.0",
+    "mysql": "^2.16.0"
   }
 }
