Fix Grafana provisioning, update dashboard

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,6 +1,6 @@
 FROM grafana/grafana:5.4.5
 
-COPY grafana-mysql.yml /etc/grafana/provisioning/datasources/datasource.yml
+COPY grafana-mysql.yml /datasource.yml
 COPY dashboard.json /dashboards/dashboard.json
 COPY dashboards.yml /etc/grafana/provisioning/dashboards/dashboards.yml
 
@@ -9,6 +9,12 @@ USER root
 RUN apt-get update && apt-get install gettext-base
 RUN chown -R grafana:grafana /etc/grafana/provisioning
 
+
+ENV MYSQL_HOST some_mysql_host
+ENV MYSQL_DATABASE some_mysql_db
+ENV MYSQL_USERNAME some_mysql_username
+ENV MYSQL_PASSWORD some_mysql_password
+
 USER grafana
-ENTRYPOINT envsubst < /etc/grafana/provisioning/datasources/datasource.yml > /etc/grafana/provisioning/datasources/datasource.yml && /run.sh
+ENTRYPOINT envsubst < /datasource.yml > /etc/grafana/provisioning/datasources/datasource.yml && /run.sh
 
